--- a/c_0425/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/c_0425/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ConsoleApplication1.cpp">
+    <ClCompile Include="0425.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
