--- a/c_0502/c_27_592/c_27_592.vcxproj
+++ b/c_0502/c_27_592/c_27_592.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{c06caeef-947a-4ee8-ad9c-3e428f357ef7}</ProjectGuid>
-    <RootNamespace>c0502</RootNamespace>
+    <ProjectGuid>{1bc3cacd-5417-4f76-ad53-0d9c5d4ee26b}</ProjectGuid>
+    <RootNamespace>c27592</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,13 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="c_memory.c" />
-    <ClCompile Include="func.c" />
-    <ClCompile Include="num.c" />
+    <ClCompile Include="areaArith.c" />
+    <ClCompile Include="basicArith.c" />
+    <ClCompile Include="main.c" />
+    <ClCompile Include="roundArith.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="header1.h" />
-    <ClInclude Include="header2.h" />
+    <ClInclude Include="areaArith.h" />
+    <ClInclude Include="basicArith.h" />
+    <ClInclude Include="roundArith.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
