--- a/c_0507_28_5/c_0507_28_5.vcxproj
+++ b/c_0507_28_5/c_0507_28_5.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7dc1d501-3c43-44f8-93a6-4d6dda439ab7}</ProjectGuid>
-    <RootNamespace>c0507</RootNamespace>
+    <ProjectGuid>{ab169cbe-5d73-49d8-9517-5b8aa8c926d2}</ProjectGuid>
+    <RootNamespace>c0507285</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,16 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="intdiv.c" />
-    <ClCompile Include="intdiv2.c" />
-    <ClCompile Include="intdiv3.c" />
-    <ClCompile Include="intdiv4.c" />
     <ClCompile Include="main.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="intdiv4.h" />
-    <ClInclude Include="stdiv.h" />
-    <ClInclude Include="stdiv2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
