--- a/c_0428/c_0428.vcxproj.filters
+++ b/c_0428/c_0428.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="c_0428.cpp">
+    <ClCompile Include="c_pointer.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
