--- a/c_0429/c_0429.vcxproj.filters
+++ b/c_0429/c_0429.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="c_0429.cpp">
+    <ClCompile Include="c_pointer_pointer.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
