--- a/c_0430/c_0430.vcxproj
+++ b/c_0430/c_0430.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="c_0430.cpp" />
+    <ClCompile Include="c_io.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
