--- a/c_0430/c_0430.vcxproj.filters
+++ b/c_0430/c_0430.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="c_0430.cpp">
+    <ClCompile Include="c_io.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
